# association_rules

./: Makefile  README.md  setup.cfg  setup.py  tox.ini
notebooks/exploratory/: 01_first_contact.ipynb
src/: __init__.py
src/data/: make_dataset.py
tests/: test_association_rules.py
