[metadata]
name = association_rules
description = data exploration of movie lens dataset
author = Pablo Arino & Alvaro Laguna
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    decision_analysis.decision_making
install_requires =
    numpy>=1.17.2
    pandas>=1.1.5
    networkx>=2.5
    matplotlib>=3.3.4

python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0

[aliases]
test = pytest

[tool:pytest]
addopts =
	--color=yes
    --ignore=setup.py